[project]
name = "todo-list-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bcrypt==4.0.1",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.13.0",
    "pytest>=8.4.2",
    "pytest-env>=1.1.5",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.39.0",
]
